--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -89,9 +89,9 @@
         <div class="container1">
             <div id="id1" class="box"><a href="Jawan.html"><img src="Image/Jawan.webp" alt="Jawan"></a><br><br><center><b>Jawan (2023)</b></center></div>
 
-            <div id="id2" class="box"><a href=""><img src="Image/Super 30.jpeg" alt="Super 30"></a><br><br><center><b>Super 30 (2019)</b></center></div>
+            <div id="id2" class="box"><a href="Super_30.html"><img src="Image/Super 30.jpeg" alt="Super 30"></a><br><br><center><b>Super 30 (2019)</b></center></div>
 
-            <div id="id3" class="box"><a href=""><img src="Image/War.jpeg" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
+            <div id="id3" class="box"><a href="War.html"><img src="Image/War.jpeg" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
 
             <div id="id4" class="box"><a href=""><img src="Image/K.G.F Chapter 2.jpg" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
 
