--- a/MOVIE FOLDER/Movie_Project.html
+++ b/MOVIE FOLDER/Movie_Project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Review Website</title>
     <link rel="stylesheet" href="Movie_Project.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -12,9 +13,12 @@
             <!-- Logo -->
             <div class="logo">
                 <div id="create-logo">CineCrunch</div>
+                <form action="">
+                    <input type="search" placeholder="Search here ...">
+                    <i class="fa fa-search"></i>
+                </form>
             </div>
-
-            <!-- Category -->
+            
              <div class="Nav-bar">
                 <ul>
                     <li><big><a href="Movie_Project.html" id="Home">Home</a></big></li>
@@ -93,11 +97,11 @@
 
             <div id="id3" class="box"><a href="War.html"><img src="Image/War.jpeg" alt="War"></a><br><br><center><b>War (2019)</b></center></div>
 
-            <div id="id4" class="box"><a href=""><img src="Image/K.G.F Chapter 2.jpg" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
+            <div id="id4" class="box"><a href="K.G.F chapter 2.html"><img src="Image/K.G.F Chapter 2.jpg" alt="K.G.F: Chapter 2"></a><br><br><center><b>K.G.F: Chapter 2 (2022)</b></center></div>
 
-            <div id="id5" class="box"><a href=""><img src="Image/Sooryavanshi.jpg" alt="Sooryavanshi"></a><br><br><center><b>Sooryavansh(2021)</b></center></div>
+            <div id="id5" class="box"><a href="Sooryavansh.html"><img src="Image/Sooryavanshi.jpg" alt="Sooryavanshi"></a><br><br><center><b>Sooryavansh(2021)</b></center></div>
 
-            <div id="id6" class="box"><a href=""><img src="Image/Drishyam 2.jpeg" alt="Drishyam 2"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
+            <div id="id6" class="box"><a href="Drishyam.html"><img src="Image/Drishyam 2.jpeg" alt="Drishyam 2"></a><br><br><center><b>Drishyam 2 (2022)</b></center></div>
         </div>
         
         <h4><button>Hollywood Movies</button></h4>
